evaluation/kubernetes/apps/istio-system/istiod/app/sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: istio-system
spec:
  inboundConnectionPool:
    http:
      # Configure a Sidecar inbound cluster HTTP Keep-Alive timeout.
      # It must be ensured that the HTTP server of the main
      # container has a strictly HIGHER/GREATER value than this.
      # See https://github.com/istio/istio/issues/55138#issuecomment-2666855044
      idleTimeout: 5s
